# cli/internal/api/gen.go
@@ -3,9 +3,20 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.8.0 DO NOT EDIT.
 package api
 
+// Error defines model for Error.
+type Error struct {
+	Error string `json:"error"`
+}
+
 // Version defines model for Version.
 type Version struct {
 	// Api API major version
 	Api     int    `json:"api"`
 	Version string `json:"version"`
+}
+
+// Whoami defines model for Whoami.
+type Whoami struct {
+	Admin bool   `json:"admin"`
+	Name  string `json:"name"`
 }
